...
            android:id="@+id/view_nav_drawer_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/status_bar" />

        <FrameLayout
            android:id="@+id/view_nav_drawer_files"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:background="?attr/selectableItemBackground">

            <ImageView
                android:id="@+id/view_nav_drawer_files_icon"
...
                android:textColor="#000"
                android:textSize="@dimen/view_nav_drawer_text_section" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/view_nav_drawer_workspace"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:background="?attr/selectableItemBackground">

            <ImageView
                android:id="@+id/view_nav_drawer_note_icon"
...
