<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:fitsSystemWindows="true">

    <FrameLayout
        android:id="@+id/activity_main_content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.design.widget.NavigationView
        android:id="@+id/activity_main_navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true">

        <com.mercandalli.android.apps.files.main.NavDrawerView
            android:id="@+id/activity_main_nav_drawer_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>